2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_hide): For safety, transfer ownership of
	the preferences and about dialogs into local variables, rather than
	invoking hide() to delete them.  That way delete won't be called
	before hide() actually returned.

	(on_about_dialog_hide): Don't use std::auto_ptr<>::reset() but
	transfer ownership into local variables.  I had a look at the
	libstdc++-v3 headers and it gave me the creeps -- reset() deletes
	_before_ assigning the new pointer.

	(on_preferences): ditto.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (error_pixbuf_): Get rid of this silly cache,
	since it became useless a while ago.

2003-01-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (SelectableLabel): Add accessibility hints.
	(ContributorBox): Likewise, and also improve the widget arrangement
	if the dialog gets resized.

2002-12-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h}: Get rid of the menubar_handle_ and
	toolbar_handle_ data members.  We don't need to keep them around
	anymore since the config option to hide one or the other is gone.

2002-12-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (SelectableLabel): New fancy experiment to
	make labels both selectable _and_ focusable, so that they end up
	in the Tab chain.

	* src/aboutdialog.cc src/imagebutton.cc src/prefdialog.cc: Don't
	show all children of custom "composite" widgets in the constructor.
	It doesn't make much sense since we call show_all() later on anyway.
	And making these "composite" widgets really independent components
	would require overriding both show_all_vfunc() and hide_all_vfunc(),
	which is currently not worth the effort.

2002-12-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/regexxer.png: Replace with a much nicer icon stolen from
	http://jimmac.musichall.cz/ikony.php3 -- looks sweet!
